# Iep

tema2/src/: CMakeLists.txt  bmw.cpp  bmw.hpp  main.cpp  masina.cpp  masina.hpp  semnalizare.cpp  semnalizare.hpp
tema3/src/: CMakeLists.txt  main.cpp  persoana.cpp  persoana.hpp  persoana_cu_cnp.cpp  persoana_cu_cnp.hpp
