cmake_minimum_requirEd(VERSION 3.2)
project(tema2)
set(CMAKE_CXX_STANDARD14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(tema2 main.cpp)
target_link_libraries(tema2 PRIVATE bmw masina semnalizare)
add_library(bmw bmw.hpp bmw.cpp)
target_include_directories(bmw PUBLIC "${CMAKE_CURRENT_SORCE_DIR}")
add_library(masina masina.hpp masina.cpp)
target_include_directories(masina PUBLIC "${CMAKE_CURRENT_SORCE_DIR}")
add_library(semnalizare semnalizare.hpp semnalizare.cpp)
target_include_directories(semnalizare PUBLIC "${CMAKE_CURRENT_SORCE_DIR}")

