cmake_minimum_requirEd(VERSION 3.2)
project(tema3)
set(CMAKE_CXX_STANDARD14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(tema3 main.cpp)
target_link_libraries(tema3 PRIVATE persoana persoana_cu_cnp)
add_library(persoana persoana.hpp persoana.cpp)
target_include_directories(persoana PUBLIC "${CMAKE_CURRENT_SORCE_DIR}")
add_library(persoana_cu_cnp persoana_cu_cnp.hpp persoana_cu_cnp.cpp)
target_include_directories(persoana_cu_cnp PUBLIC "${CMAKE_CURRENT_SORCE_DIR}")
